Fixing SVG scaling to clipping path object box.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -249,11 +249,10 @@ nav > ul li a:active {
 
 .iphoneScreen {
 	width: 388px;
-	height: 839px;
 	-webkit-clip-path: url(#screenMask);
 	clip-path: url(#screenMask);
-	margin-left: 22px;
-	margin-top: 27px;
+	margin-left: 29px;
+	margin-top: -127px;
 }
 
 .videoContainer {
